# ACloudViewer

./: .codacy.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  404.html  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  Compilation.md  DOCUMENTATION.md  DOWNLOADS_UPDATE.txt  Doxyfile  Doxyfile.exclude  Doxyfile.in  Doxyfile.modules  Makefile  README.md  donation.html  downloads_data.json  index.html  license.txt  mainpage.dox  make_docs.py  requirements.txt  robots.txt  script.js  scripts_list  site-packages  sitemap.xml  styles.css  version.txt  versions.js
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.qrc  ecv2.5DimEditor.cpp  ecv2.5DimEditor.h  ecvAboutDialog.cpp  ecvAlignDlg.cpp  ecvAnimationParamDlg.cpp  ecvAnimationParamDlg.h  ecvAnnotationsTool.cpp  ecvAnnotationsTool.h  ecvApplication.cpp  ecvApplication.h  ecvApplyTransformationDlg.cpp  ecvApplyTransformationDlg.h  ecvAskDoubleIntegerValuesDlg.h  ecvAskTwoDoubleValuesDlg.cpp  ecvBoundingBoxEditorDlg.h  ecvCamSensorProjectionDlg.cpp  ecvClippingBoxRepeatDlg.cpp  ecvColorFromScalarDlg.cpp  ecvColorGradientDlg.cpp  ecvColorLevelsDlg.cpp  ecvCommandCrossSection.cpp  ecvCommandLineCommands.cpp  ecvCommandLineCommands.h  ecvCommandLineParser.cpp  ecvCommandRaster.cpp  ecvComparisonDlg.cpp  ecvComparisonDlg.h  ecvComputeOctreeDlg.cpp  ecvComputeOctreeDlg.h  ecvConsole.cpp  ecvConsole.h  ecvContourExtractor.cpp  ecvContourExtractor.h  ecvContourExtractorDlg.cpp  ecvContourExtractorDlg.h  ecvCropTool.cpp  (+98 more)
app/QSimpleUpdater/: .clang-format
app/db_tree/: CMakeLists.txt  ecvAxesGridDialog.cpp  ecvAxesGridDialog.h  ecvCustomLabelsWidget.cpp  ecvCustomLabelsWidget.h  ecvDBRoot.cpp  ecvDBRoot.h  ecvPropertiesTreeDelegate.cpp  ecvPropertiesTreeDelegate.h  matrixDisplayDlg.cpp  sfEditDlg.cpp
app/pluginManager/: ecvPluginInfoDlg.cpp  ecvPluginInfoDlg.h  ecvPluginUIManager.cpp  ecvPluginUIManager.h  pluginManager.qrc
app/reconstruction/: AutomaticReconstructionWidget.cpp  AutomaticReconstructionWidget.h  BundleAdjustmentWidget.cpp  DatabaseManagementWidget.cpp  DatabaseManagementWidget.h  DenseReconstructionWidget.cpp  FeatureExtractionWidget.cpp  FeatureExtractionWidget.h  FeatureMatchingWidget.cpp  FeatureMatchingWidget.h  ImageViewerWidget.cpp  ImageViewerWidget.h  LogWidget.cpp  MatchMatrixWidget.cpp  MatchMatrixWidget.h  ModelViewerWidget.cpp  MovieGrabberWidget.cpp  PointViewerWidget.cpp  ReconstructionManagerWidget.cpp  ReconstructionOptionsWidget.cpp  ReconstructionStatsWidget.cpp  ReconstructionWidget.cpp  RenderOptionsWidget.h  ThreadControlWidget.cpp  ThreadControlWidget.h  UndistortionWidget.cpp
app/translations/: ACloudViewer_zh.ts  CMakeLists.txt  README.md
app/ui_templates/: MainWindow.ui  aboutDlg.ui  animationDlg.ui  askDoubleIntegerValuesDlg.ui  boundingBoxEditorDlg.ui  clippingBoxDlg.ui  commandLineDlg.ui  comparisonDlg.ui  ecvSelectionSettingsDlg.ui  filterByLabelDlg.ui  globalShiftSettingsDlg.ui  graphicalSegmentationDlg.ui  histogramDlg.ui  labelingDlg.ui  measurementToolDlg.ui  pointPairRegistrationDlg.ui  pointPropertiesDlg.ui  primitiveFactoryDlg.ui  ransacSegmentationDlg.ui  shorcutSettings.ui  tracePolylineDlg.ui
core/: CMakeLists.txt  CloudViewerConfig.cpp  CloudViewerConfig.h.in  README.md
core/.ci/: conda.yml
core/AICore/: CMakeLists.txt  README.md
core/DA3/: CMakeLists.txt
core/cmake/: CGALSupport.cmake  FindTBB.cmake
core/include/: AutoSegmentationTools.h  BoundingBox.h  CMakeLists.txt  CPUInfo.h  CVConst.h  CVCoreLib.h  CVCoreLibExport.h  CVCoreLibWin.h  CVGeom.h  CVKdTree.h  CVLog.h  CVMath.h  CVMiscTools.h  CVPlatform.h  CVPointCloud.h  CVShareable.h  CVToolbox.h  CVTools.h  CVTypes.h  CVWidgetsInterface.h  ChamferDistanceTransform.h  Chi2Helper.h  ClassMap.h  CloudSamplingTools.h  ConjugateGradient.h  Console.h  Cpu.h  Delaunay2dMesh.h  DgmOctree.h  DgmOctreeReferenceCloud.h  DistanceComputationTools.h  Eigen.h  ErrorFunction.h  (+55 more)
docs/: 404.html  BUILD_SYSTEM.md  CMakeLists.txt  DOCSTRING_FIX_PROGRESS.md  DOCSTRING_STYLE_GUIDE.md  DOCUMENTATION_WARNINGS.md  Doxyfile  Doxyfile.exclude  Doxyfile.in  Doxyfile.modules  EXAMPLE_FIX.md  Makefile  PARAVIEW_ENHANCED_CLASSES_MIGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RENAME_TO_DOCS.md  RESTRUCTURE_SUMMARY.md  build_docs.sh  documented_modules.txt  donation.html  downloads_data.json  index.html  mainpage.dox  make_docs.py  multi-window-paradigms-CloudCompare-ParaView.md  multi-window-refactor-roadmap-Vtk-vs-CC.md  requirements.txt  script.js  sitemap.xml  styles.css  versions.js
eCV/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.qrc  TODO.txt  ecv2.5DimEditor.cpp  ecv2.5DimEditor.h  ecvAboutDialog.cpp  ecvAboutDialog.h  ecvAlignDlg.cpp  ecvAlignDlg.h  ecvAnimationParamDlg.cpp  ecvAnimationParamDlg.h  ecvAnnotationsTool.cpp  ecvAnnotationsTool.h  ecvApplication.cpp  ecvApplication.h  ecvApplyTransformationDlg.cpp  ecvApplyTransformationDlg.h  ecvAskDoubleIntegerValuesDlg.cpp  ecvAskDoubleIntegerValuesDlg.h  ecvAskThreeDoubleValuesDlg.cpp  ecvAskThreeDoubleValuesDlg.h  ecvAskTwoDoubleValuesDlg.cpp  ecvAskTwoDoubleValuesDlg.h  ecvBoundingBoxEditorDlg.cpp  ecvBoundingBoxEditorDlg.h  ecvCamSensorProjectionDlg.cpp  ecvCamSensorProjectionDlg.h  ecvClippingBoxRepeatDlg.cpp  ecvClippingBoxRepeatDlg.h  ecvColorFromScalarDlg.cpp  ecvColorFromScalarDlg.h  ecvColorGradientDlg.cpp  ecvColorGradientDlg.h  ecvColorLevelsDlg.cpp  ecvColorLevelsDlg.h  ecvColorScaleEditorDlg.cpp  ecvColorScaleEditorDlg.h  ecvColorScaleEditorWidget.cpp  (+152 more)
libs/: CMakeLists.txt
plugins/: CMakeLists.txt  CMakePluginTpl.cmake  README.md  ecvCommandLineInterface.h  ecvDefaultPluginInterface.cpp  ecvDefaultPluginInterface.h  ecvIOFilterPluginInterface.h  ecvIOPluginInterface.h  ecvPluginInterface.h  ecvStdPluginInterface.h
python/: LICENSE.txt  MANIFEST.in  README.rst  cloudViewer.json  install.json  pyproject.toml  requirements-torch201.txt  requirements.txt  requirements_jupyter.txt  requirements_jupyter_build.txt  requirements_test.txt  setup.cfg  setup.py
(+63801 files in other folders)
